# qtest-venv

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  experiment  install.sh  noise_model_out.py  patch.diff  pyproject.toml  run  test  test_simulations.py  venvpatch.diff
.devcontainer/: Dockerfile  devcontainer.json
src/: avg_noise_models.py  check.py  circuits.py  experiment.py  make_noise_models.py  platforms.py  run.py  run_test.py  simulator.py  test.py  time_limit.py
src/custom_noise_models/: cambridge.py  guadalupe.py  tenerife.py
