[tool.poetry]
name = "qtest"
version = "0.1.0"
description = ""
authors = ["Anders B. Clausen <anbclausen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
qiskit = "^1.0.2"
mqt-qcec = "^2.5.0"
qiskit-aer = "^0.14.0.1"
qiskit-ibm-runtime = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
